Revert "Squashed commit of the following:"
This reverts commit fe123ffa0e42086aa52068c0fcd81fe06942b5e8.

--- a/app/src/pages/Landing.css
+++ b/app/src/pages/Landing.css
@@ -1,5 +1,5 @@
 .Landing {
-    background-image: url('../assets/Background.png');
+    background-image: url('../components/Background.png');
     background-position: 'center bottom';
     background-repeat: no-repeat;
     background-size: cover;
