--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image: url('./components/Background.png');
+  background-image: url("../../app/src/assets/Background.png");
   background-position: 'center';
   background-repeat: no-repeat;
   background-size: cover;
