--- a/app/src/pages/Landing.css
+++ b/app/src/pages/Landing.css
@@ -5,6 +5,13 @@
     background-position: top center;
 }
 
+.Landing-2 {
+    height: 22vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
 .Landing-content {
     height: 100%;
     display: flex;
@@ -16,16 +23,20 @@
 }
 
 .Landing-content-2 {
-    height: 30%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: bottom;
     padding-right: 80px;
-    color: black
+    color: black;
 }
 
 @media (min-width: 650px ) {
+    .Landing-2 {
+        background-position: center center;
+    }
+
     .Landing {
         background-position: center center;
     }
