--- a/app/src/pages/Landing.css
+++ b/app/src/pages/Landing.css
@@ -5,42 +5,35 @@
     background-position: top center;
 }
 
-.Landing-2 {
-    height: 22vh;
-}
-
 .Landing-content {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: bottom;
+    align-items: flex-end;
     padding: 40px;
-    color: white
+    color: white;
 }
 
 .Landing-content-2 {
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    color: black;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.Landing-content-3 {
+    height: 2vh;
 }
 
 @media (min-width: 650px ) {
-    .Landing-2 {
-        background-position: center center;
-    }
-
+    
     .Landing {
         background-position: center center;
     }
 
     .Landing-content {
         align-items: flex-end;
-        justify-content: center;
-    }
-    .Landing-content-2 {
         justify-content: center;
     }
 }
